<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/garden_label"
        android:text="@string/garden_label"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="@dimen/normal_margin"
    />

    <Spinner
        android:id="@+id/garden_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/garden_label"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="@dimen/normal_margin"
        />

    <TextView
        android:id="@+id/humidity_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/humidity"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/garden_label"
        android:layout_margin="10dp"
        />

    <TextView
        android:id="@+id/humidity_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/humidity_value"
        android:textSize="25sp"
        app:layout_constraintLeft_toRightOf="@id/humidity_tag"
        app:layout_constraintTop_toBottomOf="@id/garden_label"
        android:layout_margin="10dp"
        />

    <TextView
        android:id="@+id/temperature_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperature"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/humidity_tag"
        android:layout_margin="10dp"
        />

    <TextView
        android:id="@+id/temperature_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/humidity_value"
        android:textSize="25sp"
        app:layout_constraintLeft_toRightOf="@id/temperature_tag"
        app:layout_constraintTop_toBottomOf="@id/humidity_value"
        android:layout_margin="10dp"
        />

    <Switch
        android:id="@+id/switch_control"
        android:layout_margin="10dp"
        android:text="@string/watering_mode"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/temperature_value"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </Switch>

    <LinearLayout
        android:id="@+id/manual_control_segment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/switch_control"
        android:orientation="vertical"
        >

        <Switch
            android:id="@+id/switch_watering_control"
            android:layout_margin="10dp"
            android:text="@string/manual_watering"
            android:textSize="25sp"
            app:layout_constraintTop_toBottomOf="@id/humidity_value"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </Switch>

        <TextView
            android:id="@+id/seekbar_humidity_tag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/seekbar_humidity_tag"
            android:textSize="25sp"
            android:layout_margin="@dimen/normal_margin"
            />
        <SeekBar
            android:id="@+id/seekbar_humidity_threshold"
            android:tooltipText="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="20dp"
            android:maxHeight="30dp"
            android:layout_margin="@dimen/normal_margin"
            />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>