<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/login_email_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >
        <TextView
            android:id="@+id/login_label_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/login_email"
            android:textAlignment="viewStart"
            android:layout_margin="@dimen/normal_margin"
            android:labelFor="@id/login_input_email"/>

        <EditText
            android:id="@+id/login_input_email"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/login_label_email"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/normal_margin"
            android:autofillHints=""
            android:inputType="textEmailAddress" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_password_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/login_email_section"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        >
        <TextView
            android:id="@+id/login_label_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/login_password"
            android:textAlignment="viewStart"
            android:layout_margin="@dimen/normal_margin"
            android:labelFor="@id/login_input_password"/>

        <EditText
            android:id="@+id/login_input_password"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/login_label_email"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/normal_margin"
            android:autofillHints=""
            android:inputType="textPassword"
            />

    </LinearLayout>

    <Button
        android:id="@+id/login_button"
        android:text="@string/login_btn_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/login_password_section"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="@dimen/normal_margin">


    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>